8286637: (fc) Memory mapped regions bigger than 2GB do not work correctly on Windows